--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Персональна сторінка студентки</title>
 <body>
 <img src="Polunina.jpg" width="30%" align="right"/>
-Я, студентка групи ХІм-17, Bisyk Olexsandra <script>document.write(whoami);</script>, послуговуючись
+Я, студентка групи ХІм-17, <script>document.write(whoami);</script>, послуговуючись
 <script>document.write(navigator.userAgent);</script>
  на платформі <script>document.write(navigator.platform);</script>, звітую про виконання таких робіт:
 <ol>
