--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <li><a href="week7.html" target="_blank">Завдання сьомого тижня</a></li>
  <li><a href="week8.html" target="_blank">Завдання восьмого тижня</a></li>
 <li><a href="week9.html" target="_blank">Завдання дев'ятого тижня</a></li>
-<li><a href="week10.html" target="_blank">Завдання пдесятого тижня</a></li>
+<li><a href="week10.html" target="_blank">Завдання десятого тижня</a></li>
 <li><a href="week11.html" target="_blank">Завдання одинадцятого тижня</a></li>
 <li>...</li>
 
