--- a/week5.html
+++ b/week5.html
@@ -39,7 +39,7 @@
             <a-marker preset="kanji" id='marker-kanji' registerevents> 
                 <a-box position='0 0.5 0' material='color: blue;' jump></a-box> 
             </a-marker>
-            <a-marker type="pattern" url='pattern-Number-1.patt' id='my-marker' registerevents>
+            <a-marker type="pattern" url='pattern-ya.patt' id='my-marker' registerevents>
                 <a-sphere position="0 0.5 0" radius="0.5" material = "color: green;" jump></a-sphere>
             </a-marker>
 			<a-entity camera><a-cursor></a-cursor></a-entity>
